--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   intl: ^0.19.0
   path: ^1.9.0
   sqflite: ^2.3.3+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.11
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
